11710123_project2/test/test_11710123_3.out
Error type 3 at Line 4: variable is redefined in the same scope
