11710123_project2/test/test_11710123_3.spl
// type 3
int main(){
    int a = 2;
    int a = 3;
}